<resources>
    <string name="app_name">App Scheduler</string>
    <string name="schedule">Schedule</string>
    <string name="history">History</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="select">Select</string>
    <string name="time">Time</string>
    <string name="content_description">contentDescription</string>
    <string name="set_app_schedule">Set App Schedule</string>
    <string name="select_app">Select App</string>
    <string name="app_scheduled">App Scheduled</string>
    <string name="select_time">Select Time</string>
    <string name="schedule_at">Schedule At :</string>
    <string name="update_time">Update Time</string>
    <string name="time_updated">Time Updated</string>
    <string name="this_time_slot_is_already_taken">This time slot is already taken!</string>
    <string name="enable_overlay_permission">Enable Overlay Permission</string>
    <string name="message_for_floating_permission">To allow background app launching, enable \'Display over other apps\' permission. This is required to keep the scheduled app launch working even when your app is not active.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="cancel">Cancel</string>
    <string name="loading_apps">Loading Apps</string>
</resources>